// Copyright 2023 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.discoveryconfig.v1;

import "google/protobuf/timestamp.proto";
import "teleport/header/v1/resourceheader.proto";
import "teleport/legacy/types/types.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/discoveryconfig/v1;discoveryconfigv1";

// DiscoveryConfig is a resource that has Discovery Resource Matchers and a Discovery Group.
//
// Teleport Discovery Services will load the dynamic DiscoveryConfigs whose Discovery Group matches the discovery_group defined in their configuration.
message DiscoveryConfig {
  // Header is the resource header.
  teleport.header.v1.ResourceHeader header = 1;

  // Spec is an DiscoveryConfig specification.
  DiscoveryConfigSpec spec = 2;

  // Status is the resource Status
  DiscoveryConfigStatus status = 3;
}

// DiscoveryConfigSpec contains properties required to create matchers to be used by discovery_service.
// Those matchers are used by discovery_service to watch for cloud resources and create them in Teleport.
message DiscoveryConfigSpec {
  // DiscoveryGroup is used by discovery_service to add extra matchers.
  // All the discovery_services that have the same discovery_group, will load the matchers of this resource.
  string discovery_group = 1;

  // AWS is a list of AWS Matchers.
  repeated types.AWSMatcher aws = 2;
  // Azure is a list of Azure Matchers.
  repeated types.AzureMatcher azure = 3;
  // GCP is a list of GCP Matchers.
  repeated types.GCPMatcher gcp = 4;
  // Kube is a list of Kubernetes Matchers.
  repeated types.KubernetesMatcher kube = 5;
  // AccessGraph is the configurations for syncing Cloud accounts into Access Graph.
  types.AccessGraphSync access_graph = 6;
}

// DiscoveryConfigStatus holds dynamic information about the discovery configuration
// running status such as errors, state and count of the resources.
message DiscoveryConfigStatus {
  // State reports the Discovery config state.
  DiscoveryConfigState state = 1;
  // error_message holds the error message when state is DISCOVERY_CONFIG_STATE_ERROR.
  optional string error_message = 2;
  // discovered_resources holds the count of the discovered resources in the previous iteration.
  uint64 discovered_resources = 3;
  // last_sync_time is the timestamp when the Discovery Config was last sync.
  google.protobuf.Timestamp last_sync_time = 4;

  reserved 5;
  reserved "aws_ec2_instances_discovered";

  // IntegrationDiscoveredResources maps an integration to discovered resources summary.
  map<string, IntegrationDiscoveredSummary> integration_discovered_resources = 6;
}

// DiscoveryConfigState is the state of the discovery config resource.
enum DiscoveryConfigState {
  DISCOVERY_CONFIG_STATE_UNSPECIFIED = 0;
  // DISCOVERY_CONFIG_STATE_RUNNING is used when the operation doesn't report
  // incidents.
  DISCOVERY_CONFIG_STATE_RUNNING = 1;
  // DISCOVERY_CONFIG_STATE_ERROR is used when the operation reports
  // incidents.
  DISCOVERY_CONFIG_STATE_ERROR = 2;
  // DISCOVERY_CONFIG_STATE_SYNCING is used when the discovery process has started but didn't finished yet.
  DISCOVERY_CONFIG_STATE_SYNCING = 3;
}

// IntegrationDiscoveredSummary contains the a summary for each resource type that was discovered.
message IntegrationDiscoveredSummary {
  // AWSEC2 contains the summary for the AWS EC2 discovered instances.
  ResourcesDiscoveredSummary aws_ec2 = 1;

  // AWSRDS contains the summary for the AWS RDS discovered databases.
  ResourcesDiscoveredSummary aws_rds = 2;

  // AWSEKS contains the summary for the AWS EKS discovered clusters.
  ResourcesDiscoveredSummary aws_eks = 3;
}

// ResourcesDiscoveredSummary represents the AWS resources that were discovered.
message ResourcesDiscoveredSummary {
  // Found holds the count of resources found.
  // After a resource is found, it starts the sync process and ends in either an enrolled or a failed resource.
  uint64 found = 1;
  // Enrolled holds the count of the resources that were successfully enrolled.
  uint64 enrolled = 2;
  // Failed holds the count of the resources that failed to enroll.
  uint64 failed = 3;
}
